--- a/.npmrc
+++ b/.npmrc
@@ -15,4 +15,4 @@ jobs:
     - run: npm install
     - run: npm publish
       env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        NODE_AUTH_TOKEN: ${{ 328ca0525820012fc409e91ca69fc4973695e2ae }}
